--- a/index.html
+++ b/index.html
@@ -32,6 +32,37 @@
       </ul>
     </nav>
   </header>
+  <section class="hero">
+  <div class="hero-form">
+      <h3>Get Started Today</h3>
+      <p>Fill out this form and one of our trainer will schedule a consult</p>
+  <!-- Add form element -->
+  <form>
+    <label for="name">Enter full name:</label>
+      <input type="text" placeholder="Your Name" name="name" id="name" />
+    <label for="email">Enter email:</label>
+      <input type="email" placeholder="Email" name="email" id="email" />
+    <label for="phone">Enter a phone number:</label>
+      <input type="tel" placeholder="Phone" name="phone" id="phone" />
+      <p>
+        Have you worked out with a trainer before?
+        <input type="radio" name="trainer-confirm" id="trainer-yes" />
+        <label for="trainer-yes">Yes</label>
+        <input type="radio" name="trainer-confirm" id="trainer-no" />
+        <label for="trainer-no">No</label>
+      </p>
+      <p>
+        <label for="checkbox" >
+          I acknowledge that I am at least 18 years of age.
+        </label>
+        <input type="checkbox" name="age-confirm" id="checkbox" />
+      </p>
+      <button type="submit">
+        Get running!
+      </button>    
+  </form>
+  </div>
+  </section>
 
   <!-- hero/jumbotron -->
   <section>
